--- a/frontend/src/content/css/message-notificaitons.css
+++ b/frontend/src/content/css/message-notificaitons.css
@@ -20,7 +20,7 @@
 
 .notification-content {
   position: relative;
-  padding: 12px 16px;
+  padding: 12px;
   display: flex;
   align-items: flex-start;
   gap: 8px;
