--- a/wxt-dev-wxt/entrypoints/content/css/content.css
+++ b/wxt-dev-wxt/entrypoints/content/css/content.css
@@ -5,7 +5,7 @@
   flex-direction: column;
   font-size: 13px;
   line-height: 1.5;
-  background: rgba(249, 250, 251, 0.5);
+  background: #faf9f5;
 }
 
 /* Chat Section */
