--- a/wxt-dev-wxt/entrypoints/content/css/base.css
+++ b/wxt-dev-wxt/entrypoints/content/css/base.css
@@ -20,7 +20,7 @@
   width: 480px;
   height: 800px;
   border-radius: 16px;
-  background: rgba(255, 255, 255, 0.85);
+  background: #faf9f5;
   border: 1px solid rgba(0, 0, 0, 0.08);
   box-shadow: 
     0 8px 32px rgba(0, 0, 0, 0.06),
