--- a/wxt-dev-wxt/entrypoints/content/css/minimized.css
+++ b/wxt-dev-wxt/entrypoints/content/css/minimized.css
@@ -45,6 +45,58 @@
   animation: gentlePulse 2s ease-in-out infinite;
 }
 
+.terminal-icon.holographic::after {
+  content: '';
+  position: absolute;
+  top: -100%;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: linear-gradient(
+    to bottom,
+    rgba(255, 255, 255, 0) 0%,
+    rgba(255, 255, 255, 0.8) 50%,
+    rgba(255, 255, 255, 0) 100%
+  );
+  opacity: 0.5;
+  animation: scan 3s ease-in-out infinite;
+}
+
+.terminal-icon.holographic.thinking {
+  background: linear-gradient(
+    90deg,
+    hsl(240, 100%, 70%) 0%,
+    hsl(300, 100%, 70%) 25%,
+    hsl(0, 100%, 70%) 50%,
+    hsl(60, 100%, 70%) 75%,
+    hsl(120, 100%, 70%) 100%
+  );
+  background-size: 300% 100%;
+  animation: holographicShiftHorizontal 3s ease-in-out infinite;
+  filter: brightness(1.2) contrast(1.1);
+}
+
+@keyframes holographicShiftHorizontal {
+  0% {
+    background-position: 0% 50%;
+  }
+  50% {
+    background-position: 100% 50%;
+  }
+  100% {
+    background-position: 0% 50%;
+  }
+}
+
+@keyframes scan {
+  from {
+    top: -100%;
+  }
+  to {
+    top: 100%;
+  }
+}
+
 @keyframes gentlePulse {
   0%, 100% { 
     transform: scale(1); 
